Fixing about page spacing

--- a/src/app/aboutpage/aboutpage.component.css
+++ b/src/app/aboutpage/aboutpage.component.css
@@ -12,6 +12,6 @@
 
 @media only screen and (min-width : 992px) {
     #buffer{
-        margin-top: 12em;
+        margin-top: 8em;
     }
 }
